--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
 <style>
     body {
         margin: 0;
-        padding: 0
+        padding: 0;
+        font-size: 1em !important;
     }
     
     *,
